compiler/internal/frontend/testdata/parser/negative/protocols.tetra
protocol P:
    func draw(self: i32) -> i32
    func draw(self: i32) -> i32
